fix schedule tasks and website tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,7 @@ tests =
 	coverage
 	flake8
 	flexmock
+	httpx
 	mock
 	moto
 	pytest
@@ -81,6 +82,7 @@ tests =
 	pytest-cov
 	pytest-mock
 	requests-mock
+	respx
 docs =
 	sphinx
 
