add author to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,6 @@
 [wipac:cicd_setup_builder]
+author = WIPAC Developers
+author_email = developers@icecube.wisc.edu
 pypi_name = iceprod
 python_min = 3.8
 package_dirs = iceprod
@@ -93,7 +95,7 @@ include =
 
 [flake8]
 ignore = E203,E226,E228,E231,E501,W503,W504
-exclude = env,tests
+exclude = env,*tests,bin,docs,resources
 
 [tool:pytest]
 asyncio_mode = auto
