exclude make_dataclasses.py from flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -102,7 +102,7 @@ exclude =
 
 [flake8]
 ignore = E203,E226,E228,E231,E501,W503,W504
-exclude = env,*tests,bin,docs,resources
+exclude = env,*tests,bin,docs,resources,make_dataclasses.py
 
 [tool:pytest]
 asyncio_mode = auto
