try fixing pkg_binary test

--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -79,7 +79,7 @@ jobs:
 
   release:
     if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
-    needs: [pip-install, py-tests]
+    needs: [flake8, pip-install, py-tests]
     runs-on: ubuntu-latest
     concurrency: release
     steps:
@@ -95,7 +95,7 @@ jobs:
 
   docker:
     name: "Docker Image"
-    needs: [pip-install, py-tests]
+    needs: [flake8, pip-install, py-tests]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Project
