--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -6,16 +6,19 @@
 #
 alabaster==0.7.13
     # via sphinx
-babel==2.11.0
-    # via sphinx
-boto3==1.26.69
+asyncache==0.3.1
     # via iceprod (setup.py)
-botocore==1.29.69
+babel==2.12.1
+    # via sphinx
+boto3==1.26.84
+    # via iceprod (setup.py)
+botocore==1.29.84
     # via
     #   boto3
     #   s3transfer
 cachetools==5.3.0
     # via
+    #   asyncache
     #   iceprod (setup.py)
     #   wipac-rest-tools
 certifi==2022.12.7
@@ -26,7 +29,7 @@ cffi==1.15.1
     # via cryptography
 charset-normalizer==3.0.1
     # via requests
-cryptography==39.0.1
+cryptography==39.0.2
     # via
     #   iceprod (setup.py)
     #   pyjwt
@@ -75,8 +78,6 @@ python-dateutil==2.8.2
     # via
     #   botocore
     #   iceprod (setup.py)
-pytz==2022.7.1
-    # via babel
 pyyaml==6.0
     # via iceprod (setup.py)
 qrcode==7.4.2
@@ -125,7 +126,7 @@ tornado==6.2
     #   wipac-rest-tools
 types-cryptography==3.3.23.2
     # via pyjwt
-typing-extensions==4.4.0
+typing-extensions==4.5.0
     # via
     #   qrcode
     #   wipac-dev-tools
@@ -135,9 +136,9 @@ urllib3==1.26.14
     # via
     #   botocore
     #   requests
-wipac-dev-tools==1.6.10
+wipac-dev-tools==1.6.12
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-wipac-rest-tools==1.4.8
+wipac-rest-tools==1.4.14
     # via iceprod (setup.py)
