--- a/requirements-tests.txt
+++ b/requirements-tests.txt
@@ -6,21 +6,24 @@
 #
 anyio==3.6.2
     # via httpcore
+asyncache==0.3.1
+    # via iceprod (setup.py)
 attrs==22.2.0
     # via pytest
 beautifulsoup4==4.11.2
     # via iceprod (setup.py)
-boto3==1.26.69
+boto3==1.26.84
     # via
     #   iceprod (setup.py)
     #   moto
-botocore==1.29.69
+botocore==1.29.84
     # via
     #   boto3
     #   moto
     #   s3transfer
 cachetools==5.3.0
     # via
+    #   asyncache
     #   iceprod (setup.py)
     #   wipac-rest-tools
 certifi==2022.12.7
@@ -33,11 +36,11 @@ cffi==1.15.1
     # via cryptography
 charset-normalizer==3.0.1
     # via requests
-coverage[toml]==7.1.0
+coverage[toml]==7.2.1
     # via
     #   iceprod (setup.py)
     #   pytest-cov
-cryptography==39.0.1
+cryptography==39.0.2
     # via
     #   iceprod (setup.py)
     #   moto
@@ -82,7 +85,7 @@ mccabe==0.7.0
     # via flake8
 mock==5.0.1
     # via iceprod (setup.py)
-moto==4.1.2
+moto==4.1.3
     # via iceprod (setup.py)
 motor==3.1.1
     # via iceprod (setup.py)
@@ -110,7 +113,7 @@ pyopenssl==23.0.0
     # via iceprod (setup.py)
 pypng==0.20220715.0
     # via qrcode
-pytest==7.2.1
+pytest==7.2.2
     # via
     #   iceprod (setup.py)
     #   pytest-asyncio
@@ -168,7 +171,7 @@ sniffio==1.3.0
     #   anyio
     #   httpcore
     #   httpx
-soupsieve==2.3.2.post1
+soupsieve==2.4
     # via beautifulsoup4
 statsd==4.0.1
     # via iceprod (setup.py)
@@ -184,9 +187,9 @@ tornado==6.2
     #   wipac-rest-tools
 types-cryptography==3.3.23.2
     # via pyjwt
-types-toml==0.10.8.3
+types-toml==0.10.8.5
     # via responses
-typing-extensions==4.4.0
+typing-extensions==4.5.0
     # via
     #   qrcode
     #   wipac-dev-tools
@@ -197,13 +200,13 @@ urllib3==1.26.14
     #   botocore
     #   requests
     #   responses
-werkzeug==2.2.2
+werkzeug==2.2.3
     # via moto
-wipac-dev-tools==1.6.10
+wipac-dev-tools==1.6.12
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-wipac-rest-tools==1.4.8
+wipac-rest-tools==1.4.14
     # via iceprod (setup.py)
 xmltodict==0.13.0
     # via moto
