--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,17 @@
 #
 #    pip-compile --output-file=requirements.txt
 #
-boto3==1.26.69
+asyncache==0.3.1
     # via iceprod (setup.py)
-botocore==1.29.69
+boto3==1.26.84
+    # via iceprod (setup.py)
+botocore==1.29.84
     # via
     #   boto3
     #   s3transfer
 cachetools==5.3.0
     # via
+    #   asyncache
     #   iceprod (setup.py)
     #   wipac-rest-tools
 certifi==2022.12.7
@@ -22,7 +25,7 @@ cffi==1.15.1
     # via cryptography
 charset-normalizer==3.0.1
     # via requests
-cryptography==39.0.1
+cryptography==39.0.2
     # via
     #   iceprod (setup.py)
     #   pyjwt
@@ -90,7 +93,7 @@ tornado==6.2
     #   wipac-rest-tools
 types-cryptography==3.3.23.2
     # via pyjwt
-typing-extensions==4.4.0
+typing-extensions==4.5.0
     # via
     #   qrcode
     #   wipac-dev-tools
@@ -100,9 +103,9 @@ urllib3==1.26.14
     # via
     #   botocore
     #   requests
-wipac-dev-tools==1.6.10
+wipac-dev-tools==1.6.12
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-wipac-rest-tools==1.4.8
+wipac-rest-tools==1.4.14
     # via iceprod (setup.py)
