--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -26,7 +26,6 @@ jobs:
       - uses: WIPACrepo/wipac-dev-py-setup-action@v1.10
 
   py-versions:
-    needs: [py-setup]
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.versions.outputs.matrix }}
@@ -52,7 +51,6 @@ jobs:
           pip install .
 
   py-tests:
-    needs: [py-versions]
     runs-on: ubuntu-latest
     services:
       mongo:
@@ -65,7 +63,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: ${{ fromJSON(needs.py-versions.outputs.matrix).py3_versions[0] }}
+          python-version: 3.10
       - name: Set up GCC
         uses: egor-tensin/setup-gcc@v1
       - name: Setup Dependencies
@@ -81,6 +79,19 @@ jobs:
         run: |
           coverage combine
           coverage report -m --fail-under=50
+
+  docker-build:
+    name: "Docker Image"
+    if: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Project
+      uses: actions/checkout@v3
+    - name: Build Docker Image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: false
 
   release:
     if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
@@ -101,6 +112,7 @@ jobs:
 
   docker:
     name: "Docker Image"
+    if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
     needs: [flake8, pip-install, py-tests]
     runs-on: ubuntu-latest
     steps:
