python version needs to be a string

--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -43,7 +43,7 @@ jobs:
       matrix: ${{ fromJSON(needs.py-versions.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.py3_versions }}
       - run: |
@@ -61,9 +61,9 @@ jobs:
       TEST_DATABASE_URL: "localhost:27017"
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - name: Set up GCC
         uses: egor-tensin/setup-gcc@v1
       - name: Setup Dependencies
