--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -7,6 +7,9 @@ on:
     tags-ignore:
       - '**'
 
+env:
+  py_version: '3.10'
+
 jobs:
 
   flake8:
@@ -14,6 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.py_version }}
       - uses: WIPACrepo/wipac-dev-flake8-action@v1
 
   py-setup:
@@ -63,7 +68,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: ${{ env.py_version }}
       - name: Set up GCC
         uses: egor-tensin/setup-gcc@v1
       - name: Setup Dependencies
