--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -7,14 +7,19 @@ on:
     tags-ignore:
       - '**'
 
+env:
+  py_version: '3.10'
+
 jobs:
 
   flake8:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-      - uses: WIPACrepo/wipac-dev-flake8-action@v1
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.py_version }}
+      - uses: WIPACrepo/wipac-dev-flake8-action@v1.0
 
   py-setup:
     runs-on: ubuntu-latest
@@ -23,17 +28,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - uses: WIPACrepo/wipac-dev-py-setup-action@v1.10
+      - uses: WIPACrepo/wipac-dev-py-setup-action@v1.14
 
   py-versions:
-    needs: [py-setup]
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.versions.outputs.matrix }}
     steps:
       - uses: actions/checkout@v3
       - id: versions
-        uses: WIPACrepo/wipac-dev-py-versions-action@v1
+        uses: WIPACrepo/wipac-dev-py-versions-action@v2.0
 
   pip-install:
     needs: [py-versions]
@@ -44,7 +48,7 @@ jobs:
       matrix: ${{ fromJSON(needs.py-versions.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.py3_versions }}
       - run: |
@@ -52,7 +56,6 @@ jobs:
           pip install .
 
   py-tests:
-    needs: [py-versions]
     runs-on: ubuntu-latest
     services:
       mongo:
@@ -63,9 +66,9 @@ jobs:
       TEST_DATABASE_URL: "localhost:27017"
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: ${{ fromJSON(needs.py-versions.outputs.matrix).py3_versions[0] }}
+          python-version: ${{ env.py_version }}
       - name: Set up GCC
         uses: egor-tensin/setup-gcc@v1
       - name: Setup Dependencies
@@ -82,9 +85,22 @@ jobs:
           coverage combine
           coverage report -m --fail-under=50
 
+  docker-build:
+    name: "Docker Image"
+    if: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Project
+      uses: actions/checkout@v3
+    - name: Build Docker Image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: false
+
   release:
     if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
-    needs: [flake8, pip-install, py-tests]
+    needs: [flake8, py-setup, pip-install, py-tests]
     runs-on: ubuntu-latest
     concurrency: release
     steps:
@@ -101,7 +117,8 @@ jobs:
 
   docker:
     name: "Docker Image"
-    needs: [flake8, pip-install, py-tests]
+    if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
+    needs: [flake8, py-setup, pip-install, py-tests]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Project
@@ -118,14 +135,14 @@ jobs:
           type=semver,pattern={{major}}.{{minor}}
           type=semver,pattern={{major}}.{{minor}}.{{patch}}
     - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Push Docker Image
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v4
       with:
         context: .
         push: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
