--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@
 #
 #    pip-compile --output-file=requirements.txt
 #
+anyio==3.6.2
+    # via httpcore
 asyncache==0.3.1
     # via iceprod (setup.py)
-boto3==1.26.84
+boto3==1.26.113
     # via iceprod (setup.py)
-botocore==1.29.84
+botocore==1.29.113
     # via
     #   boto3
     #   s3transfer
@@ -19,28 +21,39 @@ cachetools==5.3.0
     #   wipac-rest-tools
 certifi==2022.12.7
     # via
+    #   httpcore
+    #   httpx
     #   iceprod (setup.py)
     #   requests
 cffi==1.15.1
     # via cryptography
-charset-normalizer==3.0.1
+charset-normalizer==3.1.0
     # via requests
-cryptography==39.0.2
+cryptography==40.0.1
     # via
     #   iceprod (setup.py)
     #   pyjwt
     #   pyopenssl
 dnspython==2.3.0
     # via pymongo
+h11==0.14.0
+    # via httpcore
+httpcore==0.17.0
+    # via httpx
+httpx==0.24.0
+    # via iceprod (setup.py)
 idna==3.4
-    # via requests
+    # via
+    #   anyio
+    #   httpx
+    #   requests
 jmespath==1.0.1
     # via
     #   boto3
     #   botocore
 ldap3==2.9.1
     # via iceprod (setup.py)
-motor==3.1.1
+motor==3.1.2
     # via iceprod (setup.py)
 psutil==5.9.4
     # via iceprod (setup.py)
@@ -54,7 +67,7 @@ pymongo==4.3.3
     # via
     #   iceprod (setup.py)
     #   motor
-pyopenssl==23.0.0
+pyopenssl==23.1.1
     # via iceprod (setup.py)
 pypng==0.20220715.0
     # via qrcode
@@ -85,6 +98,11 @@ setproctitle==1.3.2
     # via iceprod (setup.py)
 six==1.16.0
     # via python-dateutil
+sniffio==1.3.0
+    # via
+    #   anyio
+    #   httpcore
+    #   httpx
 statsd==4.0.1
     # via iceprod (setup.py)
 tornado==6.2
@@ -99,13 +117,13 @@ typing-extensions==4.5.0
     #   wipac-dev-tools
 unidecode==1.3.6
     # via iceprod (setup.py)
-urllib3==1.26.14
+urllib3==1.26.15
     # via
     #   botocore
     #   requests
-wipac-dev-tools==1.6.12
+wipac-dev-tools==1.6.15
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-wipac-rest-tools==1.4.14
+wipac-rest-tools==1.4.18
     # via iceprod (setup.py)
