--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.py3_versions }}
+          python-version: ${{ matrix.version }}
       - run: |
           pip install --upgrade pip wheel setuptools
           pip install .
