--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - uses: WIPACrepo/wipac-dev-py-setup-action@v1.14
+      - uses: WIPACrepo/wipac-dev-py-setup-action@v1.15
 
   py-versions:
     runs-on: ubuntu-latest
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.py3_versions }}
+          python-version: ${{ matrix.version }}
       - run: |
           pip install --upgrade pip wheel setuptools
           pip install .
