--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -12,9 +12,9 @@ asyncache==0.3.1
     # via iceprod (setup.py)
 babel==2.12.1
     # via sphinx
-boto3==1.28.1
+boto3==1.28.3
     # via iceprod (setup.py)
-botocore==1.31.1
+botocore==1.31.3
     # via
     #   boto3
     #   s3transfer
@@ -33,12 +33,12 @@ cffi==1.15.1
     # via cryptography
 charset-normalizer==3.2.0
     # via requests
-cryptography==41.0.1
+cryptography==41.0.2
     # via
     #   iceprod (setup.py)
     #   pyjwt
     #   pyopenssl
-dnspython==2.3.0
+dnspython==2.4.0
     # via pymongo
 docutils==0.20.1
     # via sphinx
@@ -47,7 +47,9 @@ exceptiongroup==1.1.2
 h11==0.14.0
     # via httpcore
 httpcore==0.17.3
-    # via httpx
+    # via
+    #   dnspython
+    #   httpx
 httpx==0.24.1
     # via iceprod (setup.py)
 idna==3.4
@@ -81,7 +83,7 @@ pygments==2.15.1
     # via sphinx
 pyjwt[crypto]==2.7.0
     # via wipac-rest-tools
-pymongo==4.4.0
+pymongo==4.4.1
     # via
     #   iceprod (setup.py)
     #   motor
@@ -120,6 +122,7 @@ six==1.16.0
 sniffio==1.3.0
     # via
     #   anyio
+    #   dnspython
     #   httpcore
     #   httpx
 snowballstemmer==2.2.0
