--- a/requirements-tests.txt
+++ b/requirements-tests.txt
@@ -10,11 +10,11 @@ asyncache==0.3.1
     # via iceprod (setup.py)
 beautifulsoup4==4.12.2
     # via iceprod (setup.py)
-boto3==1.28.1
+boto3==1.28.3
     # via
     #   iceprod (setup.py)
     #   moto
-botocore==1.31.1
+botocore==1.31.3
     # via
     #   boto3
     #   moto
@@ -38,13 +38,13 @@ coverage[toml]==7.2.7
     # via
     #   iceprod (setup.py)
     #   pytest-cov
-cryptography==41.0.1
+cryptography==41.0.2
     # via
     #   iceprod (setup.py)
     #   moto
     #   pyjwt
     #   pyopenssl
-dnspython==2.3.0
+dnspython==2.4.0
     # via pymongo
 exceptiongroup==1.1.2
     # via
@@ -57,7 +57,9 @@ flexmock==0.11.3
 h11==0.14.0
     # via httpcore
 httpcore==0.17.3
-    # via httpx
+    # via
+    #   dnspython
+    #   httpx
 httpx==0.24.1
     # via
     #   iceprod (setup.py)
@@ -83,9 +85,9 @@ markupsafe==2.1.3
     #   werkzeug
 mccabe==0.7.0
     # via flake8
-mock==5.0.2
+mock==5.1.0
     # via iceprod (setup.py)
-moto==4.1.12
+moto==4.1.13
     # via iceprod (setup.py)
 motor==3.2.0
     # via iceprod (setup.py)
@@ -105,7 +107,7 @@ pyflakes==3.0.1
     # via flake8
 pyjwt[crypto]==2.7.0
     # via wipac-rest-tools
-pymongo==4.4.0
+pymongo==4.4.1
     # via
     #   iceprod (setup.py)
     #   motor
@@ -119,7 +121,7 @@ pytest==7.4.0
     #   pytest-asyncio
     #   pytest-cov
     #   pytest-mock
-pytest-asyncio==0.21.0
+pytest-asyncio==0.21.1
     # via iceprod (setup.py)
 pytest-cov==4.1.0
     # via iceprod (setup.py)
@@ -169,6 +171,7 @@ six==1.16.0
 sniffio==1.3.0
     # via
     #   anyio
+    #   dnspython
     #   httpcore
     #   httpx
 soupsieve==2.4.1
