--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ anyio==3.7.1
     # via httpcore
 asyncache==0.3.1
     # via iceprod (setup.py)
-boto3==1.28.1
+boto3==1.28.3
     # via iceprod (setup.py)
-botocore==1.31.1
+botocore==1.31.3
     # via
     #   boto3
     #   s3transfer
@@ -29,19 +29,21 @@ cffi==1.15.1
     # via cryptography
 charset-normalizer==3.2.0
     # via requests
-cryptography==41.0.1
+cryptography==41.0.2
     # via
     #   iceprod (setup.py)
     #   pyjwt
     #   pyopenssl
-dnspython==2.3.0
+dnspython==2.4.0
     # via pymongo
 exceptiongroup==1.1.2
     # via anyio
 h11==0.14.0
     # via httpcore
 httpcore==0.17.3
-    # via httpx
+    # via
+    #   dnspython
+    #   httpx
 httpx==0.24.1
     # via iceprod (setup.py)
 idna==3.4
@@ -65,7 +67,7 @@ pycparser==2.21
     # via cffi
 pyjwt[crypto]==2.7.0
     # via wipac-rest-tools
-pymongo==4.4.0
+pymongo==4.4.1
     # via
     #   iceprod (setup.py)
     #   motor
@@ -103,6 +105,7 @@ six==1.16.0
 sniffio==1.3.0
     # via
     #   anyio
+    #   dnspython
     #   httpcore
     #   httpx
 statsd==4.0.1
