--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ install_requires =
 	tornado
 	unidecode
 	wipac-dev-tools
-	wipac-rest-tools
+	wipac-rest-tools<1.6
 python_requires = >=3.8, <3.13
 packages = find:
 
