set python max at 3.11 for now

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ author = WIPAC Developers
 author_email = developers@icecube.wisc.edu
 pypi_name = iceprod
 python_min = 3.8
+python_max = 3.11
 package_dirs = iceprod
 keywords_spaced = batch workload
 
