--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ author = WIPAC Developers
 author_email = developers@icecube.wisc.edu
 pypi_name = iceprod
 python_min = 3.8
+python_max = 3.11
 package_dirs = iceprod
 keywords_spaced = batch workload
 
@@ -64,7 +65,7 @@ install_requires =
 	tornado
 	unidecode
 	wipac-dev-tools
-	wipac-rest-tools
+	wipac-rest-tools<1.6
 python_requires = >=3.8, <3.12
 packages = find:
 
