--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -4,17 +4,17 @@
 #
 #    pip-compile --extra=docs --output-file=requirements-docs.txt
 #
-alabaster==0.7.13
+alabaster==0.7.16
     # via sphinx
-anyio==4.0.0
+anyio==4.2.0
     # via httpx
 asyncache==0.3.1
     # via iceprod (setup.py)
-babel==2.13.1
+babel==2.14.0
     # via sphinx
-boto3==1.28.81
+boto3==1.34.31
     # via iceprod (setup.py)
-botocore==1.31.81
+botocore==1.34.31
     # via
     #   boto3
     #   s3transfer
@@ -23,7 +23,7 @@ cachetools==5.3.2
     #   asyncache
     #   iceprod (setup.py)
     #   wipac-rest-tools
-certifi==2023.7.22
+certifi==2023.11.17
     # via
     #   httpcore
     #   httpx
@@ -33,31 +33,31 @@ cffi==1.16.0
     # via cryptography
 charset-normalizer==3.3.2
     # via requests
-cryptography==41.0.5
+cryptography==42.0.2
     # via
     #   iceprod (setup.py)
     #   pyjwt
     #   pyopenssl
-dnspython==2.4.2
+dnspython==2.5.0
     # via pymongo
 docutils==0.20.1
     # via sphinx
-exceptiongroup==1.1.3
+exceptiongroup==1.2.0
     # via anyio
 h11==0.14.0
     # via httpcore
-httpcore==1.0.1
+httpcore==1.0.2
     # via httpx
-httpx==0.25.1
+httpx==0.26.0
     # via iceprod (setup.py)
-idna==3.4
+idna==3.6
     # via
     #   anyio
     #   httpx
     #   requests
 imagesize==1.4.1
     # via sphinx
-jinja2==3.1.2
+jinja2==3.1.3
     # via sphinx
 jmespath==1.0.1
     # via
@@ -65,29 +65,29 @@ jmespath==1.0.1
     #   botocore
 ldap3==2.9.1
     # via iceprod (setup.py)
-markupsafe==2.1.3
+markupsafe==2.1.4
     # via jinja2
-motor==3.3.1
+motor==3.3.2
     # via iceprod (setup.py)
 packaging==23.2
     # via sphinx
-psutil==5.9.6
+psutil==5.9.8
     # via iceprod (setup.py)
-pyasn1==0.5.0
+pyasn1==0.5.1
     # via ldap3
 pycparser==2.21
     # via cffi
-pygments==2.16.1
+pygments==2.17.2
     # via sphinx
 pyjwt[crypto]==2.8.0
     # via
     #   pyjwt
     #   wipac-rest-tools
-pymongo==4.6.0
+pymongo==4.6.1
     # via
     #   iceprod (setup.py)
     #   motor
-pyopenssl==23.3.0
+pyopenssl==24.0.0
     # via iceprod (setup.py)
 pypng==0.20220715.0
     # via qrcode
@@ -113,7 +113,7 @@ requests-futures==1.0.1
     #   wipac-rest-tools
 requests-toolbelt==1.0.0
     # via iceprod (setup.py)
-s3transfer==0.7.0
+s3transfer==0.10.0
     # via boto3
 setproctitle==1.3.3
     # via iceprod (setup.py)
@@ -126,43 +126,38 @@ sniffio==1.3.0
 snowballstemmer==2.2.0
     # via sphinx
 sphinx==7.2.6
-    # via
-    #   iceprod (setup.py)
-    #   sphinxcontrib-applehelp
-    #   sphinxcontrib-devhelp
-    #   sphinxcontrib-htmlhelp
-    #   sphinxcontrib-qthelp
-    #   sphinxcontrib-serializinghtml
-sphinxcontrib-applehelp==1.0.7
+    # via iceprod (setup.py)
+sphinxcontrib-applehelp==1.0.8
     # via sphinx
-sphinxcontrib-devhelp==1.0.5
+sphinxcontrib-devhelp==1.0.6
     # via sphinx
-sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-htmlhelp==2.0.5
     # via sphinx
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
-sphinxcontrib-qthelp==1.0.6
+sphinxcontrib-qthelp==1.0.7
     # via sphinx
-sphinxcontrib-serializinghtml==1.1.9
+sphinxcontrib-serializinghtml==1.1.10
     # via sphinx
 statsd==4.0.1
     # via iceprod (setup.py)
-tornado==6.3.3
+tornado==6.4
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-typing-extensions==4.8.0
+typing-extensions==4.9.0
     # via
+    #   anyio
     #   qrcode
     #   wipac-dev-tools
-unidecode==1.3.7
+unidecode==1.3.8
     # via iceprod (setup.py)
 urllib3==2.0.7
     # via
     #   botocore
     #   requests
     #   wipac-rest-tools
-wipac-dev-tools==1.7.1
+wipac-dev-tools==1.8.2
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
