--- a/requirements-tests.txt
+++ b/requirements-tests.txt
@@ -10,16 +10,16 @@ asyncache==0.3.1
     # via iceprod (setup.py)
 beautifulsoup4==4.12.3
     # via iceprod (setup.py)
-boto3==1.34.49
+boto3==1.34.62
     # via
     #   iceprod (setup.py)
     #   moto
-botocore==1.34.49
+botocore==1.34.62
     # via
     #   boto3
     #   moto
     #   s3transfer
-cachetools==5.3.2
+cachetools==5.3.3
     # via
     #   asyncache
     #   iceprod (setup.py)
@@ -85,11 +85,11 @@ mccabe==0.7.0
     # via flake8
 mock==5.1.0
     # via iceprod (setup.py)
-moto[s3]==5.0.2
+moto[s3]==5.0.3
     # via iceprod (setup.py)
 motor==3.3.2
     # via iceprod (setup.py)
-packaging==23.2
+packaging==24.0
     # via pytest
 pluggy==1.4.0
     # via pytest
@@ -111,7 +111,7 @@ pymongo==4.6.2
     # via
     #   iceprod (setup.py)
     #   motor
-pyopenssl==24.0.0
+pyopenssl==24.1.0
     # via iceprod (setup.py)
 pypng==0.20220715.0
     # via qrcode
@@ -121,13 +121,13 @@ pytest==8.0.2
     #   pytest-asyncio
     #   pytest-cov
     #   pytest-mock
-pytest-asyncio==0.23.5
+pytest-asyncio==0.23.5.post1
     # via iceprod (setup.py)
 pytest-cov==4.1.0
     # via iceprod (setup.py)
 pytest-mock==3.12.0
     # via iceprod (setup.py)
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
     # via
     #   botocore
     #   iceprod (setup.py)
@@ -169,7 +169,7 @@ six==1.16.0
     # via
     #   python-dateutil
     #   requests-mock
-sniffio==1.3.0
+sniffio==1.3.1
     # via
     #   anyio
     #   httpx
@@ -185,7 +185,7 @@ tornado==6.4
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-typing-extensions==4.9.0
+typing-extensions==4.10.0
     # via
     #   anyio
     #   qrcode
