get all tests passing

--- a/setup.cfg
+++ b/setup.cfg
@@ -106,7 +106,7 @@ exclude =
 	examples
 
 [flake8]
-ignore = E203,E226,E228,E231,E501,W503,W504
+ignore = E116,E203,E226,E228,E231,E501,W503,W504
 exclude = env,*tests,bin,build,docs,resources,make_dataclasses.py
 
 [tool:pytest]
