--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,7 @@
 author = WIPAC Developers
 author_email = developers@icecube.wisc.edu
 pypi_name = iceprod
-python_min = 3.8
-python_max = 3.11
+python_min = 3.10
 package_dirs = iceprod
 keywords_spaced = batch workload
 
@@ -50,6 +49,7 @@ install_requires =
 	cachetools
 	certifi
 	cryptography
+    htcondor
 	httpx
 	jsonschema
 	ldap3
