--- a/setup.cfg
+++ b/setup.cfg
@@ -65,8 +65,8 @@ install_requires =
 	tornado
 	unidecode
 	wipac-dev-tools
-	wipac-rest-tools<1.6
-python_requires = >=3.10, <3.13
+	wipac-rest-tools
+python_requires = >=3.11
 packages = find:
 
 [options.extras_require]
