--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Project
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Docker meta
       id: docker_meta
-      uses: docker/metadata-action@v3
+      uses: docker/metadata-action@v5
       with:
         images: |
           ghcr.io/WIPACRepo/iceprod
@@ -27,16 +27,38 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}.{{minor}}.{{patch}}
     - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       if: ${{ github.event_name != 'pull_request' }}
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Push Docker Image
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
         context: .
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.docker_meta.outputs.tags }}
         labels: ${{ steps.docker_meta.outputs.labels }}
+
+  cvmfs:
+    name: CVMFS Singularity Image
+    needs: [docker]
+    steps:
+    - name: Checkout Project
+      uses: actions/checkout@v4
+    - name: Docker meta
+      id: docker_meta
+      uses: docker/metadata-action@v5
+      with:
+        images: |
+          ghcr.io/WIPACRepo/iceprod
+        tags: |
+            type=ref,event=branch,enable=${{ github.ref_type == 'branch' }}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}},enable=${{ github.ref_type == 'tag' }}
+    - uses: WIPACrepo/build-singularity-cvmfs-action@v1.2
+      with:
+        github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        docker_tags: ${{ steps.docker_meta.outputs.tags }}
+        dest_dir: iceprod
+        include_docker_repo: false
