--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -43,6 +43,7 @@ jobs:
 
   cvmfs:
     name: CVMFS Singularity Image
+    runs-on: ubuntu-latest
     needs: [docker]
     steps:
     - name: Checkout Project
