--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -55,7 +55,7 @@ jobs:
         images: |
           ghcr.io/WIPACRepo/iceprod
         tags: |
-            type=ref,event=branch,enable=${{ github.ref_type == 'branch' }}
+            type=sha,prefix={{branch}}-,event=branch,enable=${{ github.ref_type == 'branch' }}
             type=semver,pattern={{major}}.{{minor}}.{{patch}},enable=${{ github.ref_type == 'tag' }}
     - uses: WIPACrepo/build-singularity-cvmfs-action@v1.2
       with:
