--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ author = WIPAC Developers
 author_email = developers@icecube.wisc.edu
 pypi_name = iceprod
 python_min = 3.8
-python_max = 3.11
+python_max = 3.12
 package_dirs = iceprod
 keywords_spaced = batch workload
 
@@ -27,6 +27,7 @@ classifiers =
 	Programming Language :: Python :: 3.9
 	Programming Language :: Python :: 3.10
 	Programming Language :: Python :: 3.11
+	Programming Language :: Python :: 3.12
 download_url = https://pypi.org/project/iceprod/
 project_urls =
 	Tracker = https://github.com/WIPACrepo/iceprod/issues
@@ -65,8 +66,8 @@ install_requires =
 	tornado
 	unidecode
 	wipac-dev-tools
-	wipac-rest-tools<1.6
-python_requires = >=3.8, <3.12
+	wipac-rest-tools
+python_requires = >=3.8, <3.13
 packages = find:
 
 [options.extras_require]
