--- a/requirements-tests.txt
+++ b/requirements-tests.txt
@@ -4,41 +4,41 @@
 #
 #    pip-compile --extra=tests --output-file=requirements-tests.txt
 #
-anyio==4.3.0
+anyio==4.4.0
     # via httpx
 asyncache==0.3.1
     # via iceprod (setup.py)
 beautifulsoup4==4.12.3
     # via iceprod (setup.py)
-boto3==1.34.62
+boto3==1.35.6
     # via
     #   iceprod (setup.py)
     #   moto
-botocore==1.34.62
+botocore==1.35.6
     # via
     #   boto3
     #   moto
     #   s3transfer
-cachetools==5.3.3
+cachetools==5.5.0
     # via
     #   asyncache
     #   iceprod (setup.py)
     #   wipac-rest-tools
-certifi==2024.2.2
+certifi==2024.7.4
     # via
     #   httpcore
     #   httpx
     #   iceprod (setup.py)
     #   requests
-cffi==1.16.0
+cffi==1.17.0
     # via cryptography
 charset-normalizer==3.3.2
     # via requests
-coverage[toml]==7.4.3
+coverage[toml]==7.6.1
     # via
     #   iceprod (setup.py)
     #   pytest-cov
-cryptography==42.0.5
+cryptography==43.0.0
     # via
     #   iceprod (setup.py)
     #   moto
@@ -46,30 +46,30 @@ cryptography==42.0.5
     #   pyopenssl
 dnspython==2.6.1
     # via pymongo
-exceptiongroup==1.2.0
+exceptiongroup==1.2.2
     # via
     #   anyio
     #   pytest
-flake8==7.0.0
+flake8==7.1.1
     # via iceprod (setup.py)
-flexmock==0.11.3
+flexmock==0.12.1
     # via iceprod (setup.py)
 h11==0.14.0
     # via httpcore
-httpcore==1.0.4
+httpcore==1.0.5
     # via httpx
-httpx==0.27.0
+httpx==0.27.2
     # via
     #   iceprod (setup.py)
     #   respx
-idna==3.6
+idna==3.8
     # via
     #   anyio
     #   httpx
     #   requests
 iniconfig==2.0.0
     # via pytest
-jinja2==3.1.3
+jinja2==3.1.4
     # via moto
 jmespath==1.0.1
     # via
@@ -85,33 +85,33 @@ mccabe==0.7.0
     # via flake8
 mock==5.1.0
     # via iceprod (setup.py)
-moto[s3]==5.0.3
+moto[s3]==5.0.13
     # via iceprod (setup.py)
-motor==3.3.2
+motor==3.5.1
     # via iceprod (setup.py)
-packaging==24.0
+packaging==24.1
     # via pytest
-pluggy==1.4.0
+pluggy==1.5.0
     # via pytest
-psutil==5.9.8
+psutil==6.0.0
     # via iceprod (setup.py)
-py-partiql-parser==0.5.1
+py-partiql-parser==0.5.5
     # via moto
-pyasn1==0.5.1
+pyasn1==0.6.0
     # via ldap3
-pycodestyle==2.11.1
+pycodestyle==2.12.1
     # via flake8
-pycparser==2.21
+pycparser==2.22
     # via cffi
 pyflakes==3.2.0
     # via flake8
-pyjwt[crypto]==2.8.0
+pyjwt[crypto]==2.9.0
     # via wipac-rest-tools
-pymongo==4.6.2
+pymongo==4.8.0
     # via
     #   iceprod (setup.py)
     #   motor
-pyopenssl==24.1.0
+pyopenssl==24.2.1
     # via iceprod (setup.py)
 pypng==0.20220715.0
     # via qrcode
@@ -121,25 +121,25 @@ pytest==8.0.2
     #   pytest-asyncio
     #   pytest-cov
     #   pytest-mock
-pytest-asyncio==0.23.5.post1
+pytest-asyncio==0.23.8
     # via iceprod (setup.py)
-pytest-cov==4.1.0
+pytest-cov==5.0.0
     # via iceprod (setup.py)
-pytest-mock==3.12.0
+pytest-mock==3.14.0
     # via iceprod (setup.py)
 python-dateutil==2.9.0.post0
     # via
     #   botocore
     #   iceprod (setup.py)
     #   moto
-pyyaml==6.0.1
+pyyaml==6.0.2
     # via
     #   iceprod (setup.py)
     #   moto
     #   responses
 qrcode==7.4.2
     # via wipac-rest-tools
-requests==2.31.0
+requests==2.32.3
     # via
     #   iceprod (setup.py)
     #   moto
@@ -153,27 +153,25 @@ requests-futures==1.0.1
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-requests-mock==1.11.0
+requests-mock==1.12.1
     # via iceprod (setup.py)
 requests-toolbelt==1.0.0
     # via iceprod (setup.py)
-responses==0.25.0
+responses==0.25.3
     # via moto
-respx==0.20.2
+respx==0.21.1
     # via iceprod (setup.py)
-s3transfer==0.10.0
+s3transfer==0.10.2
     # via boto3
 setproctitle==1.3.3
     # via iceprod (setup.py)
 six==1.16.0
-    # via
-    #   python-dateutil
-    #   requests-mock
+    # via python-dateutil
 sniffio==1.3.1
     # via
     #   anyio
     #   httpx
-soupsieve==2.5
+soupsieve==2.6
     # via beautifulsoup4
 statsd==4.0.1
     # via iceprod (setup.py)
@@ -181,30 +179,30 @@ tomli==2.0.1
     # via
     #   coverage
     #   pytest
-tornado==6.4
+tornado==6.4.1
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-typing-extensions==4.10.0
+typing-extensions==4.12.2
     # via
     #   anyio
     #   qrcode
     #   wipac-dev-tools
 unidecode==1.3.8
     # via iceprod (setup.py)
-urllib3==2.0.7
+urllib3==2.2.2
     # via
     #   botocore
     #   requests
     #   responses
     #   wipac-rest-tools
-werkzeug==3.0.1
+werkzeug==3.0.4
     # via moto
-wipac-dev-tools==1.9.1
+wipac-dev-tools==1.12.0
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-wipac-rest-tools==1.5.3
+wipac-rest-tools==1.7.8
     # via iceprod (setup.py)
 xmltodict==0.13.0
     # via moto
