--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -16,9 +16,9 @@ attrs==24.2.0
     #   referencing
 babel==2.16.0
     # via sphinx
-boto3==1.35.68
+boto3==1.35.72
     # via iceprod (setup.py)
-botocore==1.35.68
+botocore==1.35.72
     # via
     #   boto3
     #   s3transfer
@@ -37,7 +37,7 @@ cffi==1.17.1
     # via cryptography
 charset-normalizer==3.4.0
     # via requests
-cryptography==43.0.3
+cryptography==44.0.0
     # via
     #   iceprod (setup.py)
     #   pyjwt
@@ -50,11 +50,11 @@ exceptiongroup==1.2.2
     # via anyio
 h11==0.14.0
     # via httpcore
-htcondor==24.1.1
+htcondor==24.2.1
     # via iceprod (setup.py)
 httpcore==1.0.7
     # via httpx
-httpx==0.27.2
+httpx==0.28.0
     # via iceprod (setup.py)
 idna==3.10
     # via
@@ -89,13 +89,13 @@ pycparser==2.22
     # via cffi
 pygments==2.18.0
     # via sphinx
-pyjwt[crypto]==2.10.0
+pyjwt[crypto]==2.10.1
     # via wipac-rest-tools
 pymongo==4.9.2
     # via
     #   iceprod (setup.py)
     #   motor
-pyopenssl==24.2.1
+pyopenssl==24.3.0
     # via iceprod (setup.py)
 python-dateutil==2.9.0.post0
     # via
@@ -123,7 +123,7 @@ requests-futures==1.0.2
     #   wipac-rest-tools
 requests-toolbelt==1.0.0
     # via iceprod (setup.py)
-rpds-py==0.21.0
+rpds-py==0.22.0
     # via
     #   jsonschema
     #   referencing
@@ -134,9 +134,7 @@ setproctitle==1.3.4
 six==1.16.0
     # via python-dateutil
 sniffio==1.3.1
-    # via
-    #   anyio
-    #   httpx
+    # via anyio
 snowballstemmer==2.2.0
     # via sphinx
 sphinx==8.1.3
@@ -155,7 +153,7 @@ sphinxcontrib-serializinghtml==2.0.0
     # via sphinx
 statsd==4.0.1
     # via iceprod (setup.py)
-tomli==2.1.0
+tomli==2.2.1
     # via sphinx
 tornado==6.4.2
     # via
