--- a/requirements-tests.txt
+++ b/requirements-tests.txt
@@ -14,11 +14,11 @@ attrs==24.2.0
     #   referencing
 beautifulsoup4==4.12.3
     # via iceprod (setup.py)
-boto3==1.35.68
+boto3==1.35.72
     # via
     #   iceprod (setup.py)
     #   moto
-botocore==1.35.68
+botocore==1.35.72
     # via
     #   boto3
     #   moto
@@ -38,11 +38,11 @@ cffi==1.17.1
     # via cryptography
 charset-normalizer==3.4.0
     # via requests
-coverage[toml]==7.6.7
+coverage[toml]==7.6.8
     # via
     #   iceprod (setup.py)
     #   pytest-cov
-cryptography==43.0.3
+cryptography==44.0.0
     # via
     #   iceprod (setup.py)
     #   moto
@@ -60,11 +60,11 @@ flexmock==0.12.1
     # via iceprod (setup.py)
 h11==0.14.0
     # via httpcore
-htcondor==24.1.1
+htcondor==24.2.1
     # via iceprod (setup.py)
 httpcore==1.0.7
     # via httpx
-httpx==0.27.2
+httpx==0.28.0
     # via
     #   iceprod (setup.py)
     #   respx
@@ -95,7 +95,7 @@ mccabe==0.7.0
     # via flake8
 mock==5.1.0
     # via iceprod (setup.py)
-moto[s3]==5.0.21
+moto[s3]==5.0.22
     # via iceprod (setup.py)
 motor==3.6.0
     # via iceprod (setup.py)
@@ -115,13 +115,13 @@ pycparser==2.22
     # via cffi
 pyflakes==3.2.0
     # via flake8
-pyjwt[crypto]==2.10.0
+pyjwt[crypto]==2.10.1
     # via wipac-rest-tools
 pymongo==4.9.2
     # via
     #   iceprod (setup.py)
     #   motor
-pyopenssl==24.2.1
+pyopenssl==24.3.0
     # via iceprod (setup.py)
 pytest==8.0.2
     # via
@@ -173,7 +173,7 @@ responses==0.25.3
     # via moto
 respx==0.21.1
     # via iceprod (setup.py)
-rpds-py==0.21.0
+rpds-py==0.22.0
     # via
     #   jsonschema
     #   referencing
@@ -184,14 +184,12 @@ setproctitle==1.3.4
 six==1.16.0
     # via python-dateutil
 sniffio==1.3.1
-    # via
-    #   anyio
-    #   httpx
+    # via anyio
 soupsieve==2.6
     # via beautifulsoup4
 statsd==4.0.1
     # via iceprod (setup.py)
-tomli==2.1.0
+tomli==2.2.1
     # via
     #   coverage
     #   pytest
