--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ attrs==24.2.0
     # via
     #   jsonschema
     #   referencing
-boto3==1.35.68
+boto3==1.35.72
     # via iceprod (setup.py)
-botocore==1.35.68
+botocore==1.35.72
     # via
     #   boto3
     #   s3transfer
@@ -33,7 +33,7 @@ cffi==1.17.1
     # via cryptography
 charset-normalizer==3.4.0
     # via requests
-cryptography==43.0.3
+cryptography==44.0.0
     # via
     #   iceprod (setup.py)
     #   pyjwt
@@ -44,11 +44,11 @@ exceptiongroup==1.2.2
     # via anyio
 h11==0.14.0
     # via httpcore
-htcondor==24.1.1
+htcondor==24.2.1
     # via iceprod (setup.py)
 httpcore==1.0.7
     # via httpx
-httpx==0.27.2
+httpx==0.28.0
     # via iceprod (setup.py)
 idna==3.10
     # via
@@ -73,13 +73,13 @@ pyasn1==0.6.1
     # via ldap3
 pycparser==2.22
     # via cffi
-pyjwt[crypto]==2.10.0
+pyjwt[crypto]==2.10.1
     # via wipac-rest-tools
 pymongo==4.9.2
     # via
     #   iceprod (setup.py)
     #   motor
-pyopenssl==24.2.1
+pyopenssl==24.3.0
     # via iceprod (setup.py)
 python-dateutil==2.9.0.post0
     # via
@@ -106,7 +106,7 @@ requests-futures==1.0.2
     #   wipac-rest-tools
 requests-toolbelt==1.0.0
     # via iceprod (setup.py)
-rpds-py==0.21.0
+rpds-py==0.22.0
     # via
     #   jsonschema
     #   referencing
@@ -117,9 +117,7 @@ setproctitle==1.3.4
 six==1.16.0
     # via python-dateutil
 sniffio==1.3.1
-    # via
-    #   anyio
-    #   httpx
+    # via anyio
 statsd==4.0.1
     # via iceprod (setup.py)
 tornado==6.4.2
