--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -6,19 +6,19 @@
 #
 alabaster==1.0.0
     # via sphinx
-anyio==4.6.2.post1
+anyio==4.7.0
     # via httpx
 asyncache==0.3.1
     # via iceprod (setup.py)
-attrs==24.2.0
+attrs==24.3.0
     # via
     #   jsonschema
     #   referencing
 babel==2.16.0
     # via sphinx
-boto3==1.35.72
+boto3==1.35.87
     # via iceprod (setup.py)
-botocore==1.35.72
+botocore==1.35.87
     # via
     #   boto3
     #   s3transfer
@@ -27,7 +27,7 @@ cachetools==5.5.0
     #   asyncache
     #   iceprod (setup.py)
     #   wipac-rest-tools
-certifi==2024.8.30
+certifi==2024.12.14
     # via
     #   httpcore
     #   httpx
@@ -54,7 +54,7 @@ htcondor==24.2.1
     # via iceprod (setup.py)
 httpcore==1.0.7
     # via httpx
-httpx==0.28.0
+httpx==0.28.1
     # via iceprod (setup.py)
 idna==3.10
     # via
@@ -63,7 +63,7 @@ idna==3.10
     #   requests
 imagesize==1.4.1
     # via sphinx
-jinja2==3.1.4
+jinja2==3.1.5
     # via sphinx
 jmespath==1.0.1
     # via
@@ -81,7 +81,7 @@ motor==3.6.0
     # via iceprod (setup.py)
 packaging==24.2
     # via sphinx
-psutil==6.1.0
+psutil==6.1.1
     # via iceprod (setup.py)
 pyasn1==0.6.1
     # via ldap3
@@ -123,7 +123,7 @@ requests-futures==1.0.2
     #   wipac-rest-tools
 requests-toolbelt==1.0.0
     # via iceprod (setup.py)
-rpds-py==0.22.0
+rpds-py==0.22.3
     # via
     #   jsonschema
     #   referencing
@@ -131,7 +131,7 @@ s3transfer==0.10.4
     # via boto3
 setproctitle==1.3.4
     # via iceprod (setup.py)
-six==1.16.0
+six==1.17.0
     # via python-dateutil
 sniffio==1.3.1
     # via anyio
@@ -165,7 +165,7 @@ typing-extensions==4.12.2
     #   wipac-dev-tools
 unidecode==1.3.8
     # via iceprod (setup.py)
-urllib3==2.2.3
+urllib3==2.3.0
     # via
     #   botocore
     #   requests
@@ -174,5 +174,5 @@ wipac-dev-tools==1.13.0
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-wipac-rest-tools==1.8.2
+wipac-rest-tools==1.8.5
     # via iceprod (setup.py)
