--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ install_requires =
 	jsonschema
 	ldap3
 	motor
+	prometheus-client
 	psutil
 	pyOpenSSL
 	pymongo
@@ -61,7 +62,6 @@ install_requires =
 	requests-futures
 	requests-toolbelt
 	setproctitle
-	statsd
 	tornado
 	unidecode
 	wipac-dev-tools
