--- a/requirements-tests.txt
+++ b/requirements-tests.txt
@@ -8,22 +8,22 @@ anyio==4.8.0
     # via httpx
 asyncache==0.3.1
     # via iceprod (setup.py)
-attrs==24.3.0
+attrs==25.1.0
     # via
     #   jsonschema
     #   referencing
 beautifulsoup4==4.12.3
     # via iceprod (setup.py)
-boto3==1.36.2
+boto3==1.36.7
     # via
     #   iceprod (setup.py)
     #   moto
-botocore==1.36.2
+botocore==1.36.7
     # via
     #   boto3
     #   moto
     #   s3transfer
-cachetools==5.5.0
+cachetools==5.5.1
     # via
     #   asyncache
     #   iceprod (setup.py)
@@ -103,6 +103,8 @@ packaging==24.2
     # via pytest
 pluggy==1.5.0
     # via pytest
+prometheus-client==0.21.1
+    # via iceprod (setup.py)
 psutil==6.1.1
     # via iceprod (setup.py)
 py-partiql-parser==0.6.1
@@ -147,7 +149,7 @@ pyyaml==6.0.2
     #   responses
 qrcode==8.0
     # via wipac-rest-tools
-referencing==0.36.1
+referencing==0.36.2
     # via
     #   jsonschema
     #   jsonschema-specifications
@@ -177,7 +179,7 @@ rpds-py==0.22.3
     # via
     #   jsonschema
     #   referencing
-s3transfer==0.11.1
+s3transfer==0.11.2
     # via boto3
 setproctitle==1.3.4
     # via iceprod (setup.py)
@@ -187,8 +189,6 @@ sniffio==1.3.1
     # via anyio
 soupsieve==2.6
     # via beautifulsoup4
-statsd==4.0.1
-    # via iceprod (setup.py)
 tomli==2.2.1
     # via
     #   coverage
@@ -218,7 +218,7 @@ urllib3==2.3.0
     #   wipac-rest-tools
 werkzeug==3.1.3
     # via moto
-wipac-dev-tools==1.15.0
+wipac-dev-tools==1.15.1
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
