--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,17 @@ anyio==4.8.0
     # via httpx
 asyncache==0.3.1
     # via iceprod (setup.py)
-attrs==24.3.0
+attrs==25.1.0
     # via
     #   jsonschema
     #   referencing
-boto3==1.36.2
+boto3==1.36.7
     # via iceprod (setup.py)
-botocore==1.36.2
+botocore==1.36.7
     # via
     #   boto3
     #   s3transfer
-cachetools==5.5.0
+cachetools==5.5.1
     # via
     #   asyncache
     #   iceprod (setup.py)
@@ -67,6 +67,8 @@ ldap3==2.9.1
     # via iceprod (setup.py)
 motor==3.6.1
     # via iceprod (setup.py)
+prometheus-client==0.21.1
+    # via iceprod (setup.py)
 psutil==6.1.1
     # via iceprod (setup.py)
 pyasn1==0.6.1
@@ -89,7 +91,7 @@ pyyaml==6.0.2
     # via iceprod (setup.py)
 qrcode==8.0
     # via wipac-rest-tools
-referencing==0.36.1
+referencing==0.36.2
     # via
     #   jsonschema
     #   jsonschema-specifications
@@ -110,7 +112,7 @@ rpds-py==0.22.3
     # via
     #   jsonschema
     #   referencing
-s3transfer==0.11.1
+s3transfer==0.11.2
     # via boto3
 setproctitle==1.3.4
     # via iceprod (setup.py)
@@ -118,8 +120,6 @@ six==1.17.0
     # via python-dateutil
 sniffio==1.3.1
     # via anyio
-statsd==4.0.1
-    # via iceprod (setup.py)
 tornado==6.4.2
     # via
     #   iceprod (setup.py)
@@ -137,7 +137,7 @@ urllib3==2.3.0
     #   botocore
     #   requests
     #   wipac-rest-tools
-wipac-dev-tools==1.15.0
+wipac-dev-tools==1.15.1
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
