--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ author = WIPAC Developers
 author_email = developers@icecube.wisc.edu
 pypi_name = iceprod
 python_min = 3.11
-python_max = 3.12
+python_max = 3.13
 package_dirs = iceprod
 keywords_spaced = batch workload
 
@@ -25,6 +25,7 @@ classifiers =
 	License :: OSI Approved :: MIT License
 	Programming Language :: Python :: 3.11
 	Programming Language :: Python :: 3.12
+	Programming Language :: Python :: 3.13
 download_url = https://pypi.org/project/iceprod/
 project_urls =
 	Tracker = https://github.com/WIPACrepo/iceprod/issues
@@ -66,7 +67,7 @@ install_requires =
 	unidecode
 	wipac-dev-tools
 	wipac-rest-tools
-python_requires = >=3.11, <3.13
+python_requires = >=3.11, <3.14
 packages = find:
 
 [options.extras_require]
